--- a/estrutural.html
+++ b/estrutural.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seecon Engenharia - Engenharia Estrutural</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="./images/flaticon.png">
     <link rel="stylesheet" href="./styles/pages/estrutural.css">
     <link rel="stylesheet" href="./styles/components/header.css">
@@ -16,11 +15,12 @@
     <!----Jquery-->
     <script type="text/javascript" src="js/JQuery3.3.1.js"></script>
     <script type="text/javascript" src="js/lightslider.js"></script>
-    
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
         <!----header-->
@@ -73,7 +73,7 @@
                 <div class="col-11 bg-content">
                     <h2>Engenharia Estrutural</h2>
                     <br>
-                        O investimento em recuperação de estruturas eleva a durabilidade do patrimônio e garante maior segurança aos moradores de um condomínio ou residência. </h6>
+                        <h6>O investimento em recuperação de estruturas eleva a durabilidade do patrimônio e garante maior segurança aos moradores de um condomínio ou residência. </h6>
                     <div class="button-wpp">
                         <a href="#"> 
                             <img src="./images/whatsapp.png"></img>
@@ -383,5 +383,6 @@
         </div>
     </footer>
 </body>
-<script src="js/buttonMobile.js" type="text/javascript"></script>  
+<script src="js/script.js" type="text/javascript"></script>
+<script src="js/buttonMobile.js" type="text/javascript"></script>
 </html>
