--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seecon Engenharia - Contato</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="./images/flaticon.png">
+    <link rel="shortcut icon" href="images/flaticon.png">
     <link rel="stylesheet" href="./styles/pages/contato.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/components/header.css">
