--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
     <!----header-->
     <header>
         <div class="content">
-            <img src="./images/logo.png" class="img-fluid" id="logo">
+            <img src="./images/logo.png" class="img-fluid" id="logo" alt="logo seecon">
             <nav id="nav">
                 <button 
                 aria-label="Abrir menu"
@@ -63,6 +63,7 @@
     
     <!----hero-->
     <section>
+        <title>Contato</title>
         <div class='img-fluid' id="hero">
             <div class="infos-hero col-sm-7 col-12">
                 <div class="texts-hero">
@@ -83,8 +84,8 @@
         <section class="main-home">
             <h2>Clientes comerciais</h2>
             <div class="clients">
-                <img src="./images/clientes.png">
-                <img id="clients-2"src="./images/clientes2.png">
+                <img src="./images/clientes.png" alt="logo clientes">
+                <img id="clients-2"src="./images/clientes2.png" alt="logo clientes">
             </div>
         </section>
 
@@ -123,7 +124,7 @@
                        <div class="container">    
                             <div class="button-wpp">
                                 <a href="#"> 
-                                    <img src="./images/whatsapp.png"></img>
+                                    <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                     Fale conosco
                                 </a>
                             </div>
@@ -131,16 +132,16 @@
                        <h4 class="text-white text-social-medias">Acesse nossas redes e não perca nenhum dos nossos conteúdos!</h4>
                        <div class="info-icons">
                             <a>
-                                <img src="./images/Facebook.png">
+                                <img src="./images/Facebook.png" alt="logo facebook">
                             </a>
                             <a>
-                                <img src="./images/instagram.png">
+                                <img src="./images/instagram.png" alt="logo instagram">
                             </a>
                             <a>
-                                <img src="./images/linkedin.png">
+                                <img src="./images/linkedin.png" alt="logo linkedin">
                             </a>
                             <a>
-                                <img src="./images/youtube.png">
+                                <img src="./images/youtube.png" alt="logo youtube">
                             </a>
                        </div>
                     </div>
@@ -150,8 +151,8 @@
             <div class="bg-blue"></div>
     </main>
 
-    <!----footer-->
-    <footer>
+     <!----footer-->
+     <footer>
         <div class="footer">
             <div class="footer-content">   
                 <h5>Seecon Engenharia e Soluções</h5>
@@ -164,25 +165,25 @@
             </div>    
             <div class="footer-icons">
                 <a>
-                    <img src="./images/whatsapp.png">
+                    <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
-                    <img src="./images/Facebook.png">
+                    <img src="./images/Facebook.png" alt="logo facebook">
                 </a>
                 <a>
-                    <img src="./images/instagram.png">
+                    <img src="./images/instagram.png" alt="logo instagram">
                 </a>
                 <a>
-                    <img src="./images/linkedin.png">
+                    <img src="./images/linkedin.png" alt="logo linkedin">
                 </a>
                 <a>
-                    <img src="./images/youtube.png">
+                    <img src="./images/youtube.png" alt="logo youtube">
                 </a>
             </div> 
         </div>
         <div class="created">
             <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                <img src="images/github.png">
+                <img src="images/github.png" alt="logo github">
                 <span>&nbsp Lincoln Modesto</span>
             </a>
         </div>
