--- a/diagnostica.html
+++ b/diagnostica.html
@@ -70,7 +70,7 @@
         <section>
             <div class="bg-main">
                     <div class="bg-content">
-                        <h2>Engenharia Diagnóstica</h2>
+                        <h1>Engenharia Diagnóstica</h1>
                         <h6>A equipe da <span>SEECON ENGENHARIA</span> segue rigorosas normas nacionais e internacioanis 
                             quanto a vistoria de imóveis comerciais e residenciais. Realizamos diversos tipos de 
                             vistorias para construtoras, condomínios e lojas comerciais. </h6>
@@ -422,8 +422,8 @@
             <div class="bg-blue"></div>
     </main>
 
-    <!----footer-->
-    <footer>
+      <!----footer-->
+      <footer>
         <div class="footer">
             <div class="footer-content">   
                 <h5>Seecon Engenharia e Soluções</h5>
@@ -436,25 +436,25 @@
             </div>    
             <div class="footer-icons">
                 <a>
-                    <img src="./images/whatsapp.png">
+                    <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
-                    <img src="./images/Facebook.png">
+                    <img src="./images/Facebook.png" alt="logo facebook">
                 </a>
                 <a>
-                    <img src="./images/instagram.png">
+                    <img src="./images/instagram.png" alt="logo instagram">
                 </a>
                 <a>
-                    <img src="./images/linkedin.png">
+                    <img src="./images/linkedin.png" alt="logo linkedin">
                 </a>
                 <a>
-                    <img src="./images/youtube.png">
+                    <img src="./images/youtube.png" alt="logo youtube">
                 </a>
             </div> 
         </div>
         <div class="created">
             <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                <img src="images/github.png">
+                <img src="images/github.png" alt="logo github">
                 <span>&nbsp Lincoln Modesto</span>
             </a>
         </div>
