--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!----header-->
         <header>
             <div class="content">
-                <img src="./images/logo.png" class="img-fluid" id="logo">
+                <img src="./images/logo.png" class="img-fluid" id="logo" alt="logo seecon">
                 <nav id="nav">
                     <button 
                     aria-label="Abrir menu"
@@ -66,6 +66,7 @@
 
     <!----hero-->
         <section>
+            <title>Seecon Engenharia</title>
             <div class='img-fluid' id="hero">
                 <div class="infos-hero col-sm-7 col-12">
                     <div class="texts-hero">
@@ -83,7 +84,7 @@
     <!----main-->
         <main>
             <section class="main-home">
-                <img class="img-fluid" src="./images/img-exp.jpg">
+                <img class="img-fluid" src="./images/img-exp.jpg" alt="engenheira seecon">
                 <div class="main-list">
                     <h2>Expertise em Engenharia</h2>
                     <ul>
@@ -108,7 +109,7 @@
             </section>
         </main>
 
-    <!----footer-->
+<!----footer-->
     <footer>
         <div class="footer">
             <div class="footer-content">   
@@ -122,25 +123,25 @@
             </div>    
             <div class="footer-icons">
                 <a>
-                    <img src="./images/whatsapp.png">
+                    <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
-                    <img src="./images/Facebook.png">
+                    <img src="./images/Facebook.png" alt="logo facebook">
                 </a>
                 <a>
-                    <img src="./images/instagram.png">
+                    <img src="./images/instagram.png" alt="logo instagram">
                 </a>
                 <a>
-                    <img src="./images/linkedin.png">
+                    <img src="./images/linkedin.png" alt="logo linkedin">
                 </a>
                 <a>
-                    <img src="./images/youtube.png">
+                    <img src="./images/youtube.png" alt="logo youtube">
                 </a>
             </div> 
         </div>
         <div class="created">
             <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                <img src="images/github.png">
+                <img src="images/github.png" alt="logo github">
                 <span>&nbsp Lincoln Modesto</span>
             </a>
         </div>
