--- a/seniorliving.html
+++ b/seniorliving.html
@@ -23,10 +23,11 @@
         rel="stylesheet">
 </head>
     <body>
+
          <!----header-->
          <header>
             <div class="content">
-                <img src="./images/logo.png" class="img-fluid" id="logo">
+                <img src="./images/logo.png" class="img-fluid" id="logo" alt="Logo Sênior Living">
                 <nav id="nav">
                     <button 
                     aria-label="Abrir menu"
@@ -69,15 +70,16 @@
         
         <main>
             <section>
+                <title id="h1-senior">Sênior Living</title>
                 <div class="bg-main">
                     <div class=" col-6"></div>
                     <div class=" col-6 bg-content">
-                        <img id="senior-logo" src="./images/senior-logo.png">
+                        <img id="senior-logo" src="./images/senior-logo.png" alt="logo senior living">
                         <h6>Senior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
                             <br>Tudo isso, em local especializado que atenda suas necessidades ao mesmo tempo que alia serviços e experiência.</h6>
                         <div class="button-wpp">
                             <a href="#"> 
-                                <img src="./images/whatsapp.png"></img>
+                                <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                 Fale conosco
                             </a>
                         </div>
@@ -87,7 +89,7 @@
 
             <section id="section-texts">
                 <div class="col-4 img-casal">
-                    <img id="casal" class="img-fluid" src="images/senior2.jpg">
+                    <img id="casal" class="img-fluid" src="images/senior2.jpg" alt="casal idosos">
                 </div>
                 <div class=" senior-texts">
                     <div>
@@ -170,12 +172,12 @@
                             <div class="form-infos">
                                 <h4>Um novo conceito em conforto!</h4>
                                 <h6>Contate-nos para descobrir as melhores soluções construtivas em sênior living</h6>
-                                <img class="img-fluid estrutural" src="images/senior-logo.png">
+                                <img class="img-fluid estrutural" src="images/senior-logo.png" alt="logo senior living">
                                 <div class="container-form-info">    
                                     <span>Mande uma mensagem mensagem no nosso WhatsApp</span>
                                     <div class="button-wpp">
                                         <a href="#"> 
-                                            <img src="./images/whatsapp.png"></img>
+                                            <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                             Fale conosco
                                         </a>
                                     </div>
@@ -186,43 +188,43 @@
             <div class="bg-aqua"></div>
         </main>
         
-        <!----footer-->
-        <footer>
-                <div class="footer">
-                    <div class="footer-content">   
-                        <h5>Seecon Engenharia e Soluções</h5>
-                        <p>Rua Manoel Andrade, nº 1755, Bairro Coroa do Meio, Aracaju/SE</p>
-                        <div class="phones">
-                            <p>(79)3085-3307</p> &nbsp; &nbsp;
-                            <p>(79) 99145-9081</p>
-                        </div>
-                        <p>contato@seeconengenharia.com</p>
-                    </div>    
-                    <div class="footer-icons">
-                        <a>
-                            <img src="./images/whatsapp.png">
-                        </a>
-                        <a>
-                            <img src="./images/Facebook.png">
-                        </a>
-                        <a>
-                            <img src="./images/instagram.png">
-                        </a>
-                        <a>
-                            <img src="./images/linkedin.png">
-                        </a>
-                        <a>
-                            <img src="./images/youtube.png">
-                        </a>
-                    </div> 
+          <!----footer-->
+    <footer>
+        <div class="footer">
+            <div class="footer-content">   
+                <h5>Seecon Engenharia e Soluções</h5>
+                <p>Rua Manoel Andrade, nº 1755, Bairro Coroa do Meio, Aracaju/SE</p>
+                <div class="phones">
+                    <p>(79)3085-3307</p> &nbsp; &nbsp;
+                    <p>(79) 99145-9081</p>
                 </div>
-                <div class="created">
-                    <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                        <img src="images/github.png">
-                        <span>&nbsp Lincoln Modesto</span>
-                    </a>
-                </div>
-        </footer>
+                <p>contato@seeconengenharia.com</p>
+            </div>    
+            <div class="footer-icons">
+                <a>
+                    <img src="./images/whatsapp.png" alt="logo whatsapp">
+                </a>
+                <a>
+                    <img src="./images/Facebook.png" alt="logo facebook">
+                </a>
+                <a>
+                    <img src="./images/instagram.png" alt="logo instagram">
+                </a>
+                <a>
+                    <img src="./images/linkedin.png" alt="logo linkedin">
+                </a>
+                <a>
+                    <img src="./images/youtube.png" alt="logo youtube">
+                </a>
+            </div> 
+        </div>
+        <div class="created">
+            <a href="https://github.com/Lincoln-Modesto" target="_blank">
+                <img src="images/github.png" alt="logo github">
+                <span>&nbsp Lincoln Modesto</span>
+            </a>
+        </div>
+    </footer>
     </body>
     <script src="js/script.js" type="text/javascript"></script> 
     <script src="js/buttonMobile.js" type="text/javascript"></script> 
