--- a/contato.html
+++ b/contato.html
@@ -93,26 +93,53 @@
             <h2>Entre em contato e solicite um orçamento!</h2>
             <div class="main-form-content">
                 <div class="col-6">
-                    <form class="form form-group">
+                    <form action="https://api.staticforms.xyz/submit" method="post" class="form form-group needs-validation" novalidate>
                         <h6>Entre em contato</h6>
+                        <input type="hidden" name="accessKey" value="c5321e9d-b753-4b2f-862b-7174b08c2b1b">
+                        <input type="hidden" name="redirectTo" value="https://lincoln-modesto.github.io/Seecon-Engenharia/contato.html" >
+                       
                         <div class="form-group">
-                            <label >Nome</label>
-                            <input class="form-control" type="text">
+                            <label for="validationCustom01">Nome</label>
+                            <input class="form-control" type="text" id="validationCustom01" name="name" required>
+                            <div class="valid-feedback">
+                                Tudo certo!
+                            </div>
+                            <div class="invalid-feedback">
+                                Por favor, digite seu nome.
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label>Email</label>
-                            <input class="form-control" type="email">
+                            <label for="validationCustom02">E-mail</label>
+                            <input class="form-control" type="email" id="validationCustom02" name="email" required>
+                            <div class="valid-feedback">
+                                Tudo certo!
+                            </div>
+                            <div class="invalid-feedback">
+                                Por favor, digite seu e-mail.
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label>Telefone</label>
-                            <input class="form-control" type="text">
+                            <label for="validationCustom03">Telefone</label>
+                            <input class="form-control" type="text" id="validationCustom03" name="phone" required>
+                            <div class="valid-feedback">
+                                Tudo certo!
+                            </div>
+                            <div class="invalid-feedback">
+                                Por favor, digite seu telefone.
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label>Mensagem</label>
-                            <textarea class="form-control" rows="3"></textarea>
+                            <label for="validationCustom04">Mensagem</label>
+                            <textarea class="form-control" id="validationCustom04" type="text" rows="3" name="message" required></textarea >
+                            <div class="valid-feedback">
+                                Tudo certo!
+                            </div>
+                            <div class="invalid-feedback">
+                                Por favor, escreva o motivo do seu contato.
+                            </div>
                         </div>
-                        <div class="button-send">
-                            <a href="#">Enviar</a>
+                        <div id="button-form">
+                            <button class="button-send">Enviar</button>
                         </div>
                     </form>
                 </div>
@@ -151,7 +178,7 @@
             <div class="bg-blue"></div>
     </main>
 
-     <!----footer-->
+      <!----footer-->
      <footer>
         <div class="footer">
             <div class="footer-content">   
@@ -190,4 +217,5 @@
     </footer>
 </body>
 <script src="js/buttonMobile.js" type="text/javascript"></script> 
+<script src="js/formValidation.js" type="text/javascript"></script> 
 </html>
