--- a/seniorliving.html
+++ b/seniorliving.html
@@ -145,30 +145,57 @@
                 <h2>Entre em contato e solicite uma visita!</h2>
                     <div class="main-form-content">
                         <div class="col-6">
-                            <form class="form form-group">
+                            <form action="https://api.staticforms.xyz/submit" method="post" class="form form-group needs-validation" novalidate>
                                 <h6>Entre em contato</h6>
+                                <input type="hidden" name="accessKey" value="c5321e9d-b753-4b2f-862b-7174b08c2b1b">
+                                <input type="hidden" name="redirectTo" value="https://lincoln-modesto.github.io/Seecon-Engenharia/contato.html" >
+                               
                                 <div class="form-group">
-                                    <label >Nome</label>
-                                    <input class="form-control" type="text">
+                                    <label for="validationCustom01">Nome</label>
+                                    <input class="form-control" type="text" id="validationCustom01" name="name" required>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Por favor, digite seu nome.
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Email</label>
-                                    <input class="form-control" type="email">
+                                    <label for="validationCustom02">E-mail</label>
+                                    <input class="form-control" type="email" id="validationCustom02" name="email" required>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Por favor, digite seu e-mail.
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Telefone</label>
-                                    <input class="form-control" type="text">
+                                    <label for="validationCustom03">Telefone</label>
+                                    <input class="form-control" type="text" id="validationCustom03" name="phone" required>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Por favor, digite seu telefone.
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Mensagem</label>
-                                    <textarea class="form-control" rows="3"></textarea>
+                                    <label for="validationCustom04">Mensagem</label>
+                                    <textarea class="form-control" id="validationCustom04" type="text" rows="3" name="message" required></textarea >
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Por favor, escreva o motivo do seu contato.
+                                    </div>
                                 </div>
-                                <div class="button-send">
-                                    <a href="#">Enviar</a>
+                                <div id="button-form">
+                                    <button class="button-send">Enviar</button>
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" id="senior">
                             <div class="form-infos">
                                 <h4>Um novo conceito em conforto!</h4>
                                 <h6>Contate-nos para descobrir as melhores soluções construtivas em sênior living</h6>
@@ -189,43 +216,45 @@
         </main>
         
           <!----footer-->
-    <footer>
-        <div class="footer">
-            <div class="footer-content">   
-                <h5>Seecon Engenharia e Soluções</h5>
-                <p>Rua Manoel Andrade, nº 1755, Bairro Coroa do Meio, Aracaju/SE</p>
-                <div class="phones">
-                    <p>(79)3085-3307</p> &nbsp; &nbsp;
-                    <p>(79) 99145-9081</p>
-                </div>
-                <p>contato@seeconengenharia.com</p>
-            </div>    
-            <div class="footer-icons">
-                <a>
-                    <img src="./images/whatsapp.png" alt="logo whatsapp">
+        <footer>
+            <div class="footer">
+                <div class="footer-content">   
+                    <h5>Seecon Engenharia e Soluções</h5>
+                    <p>Rua Manoel Andrade, nº 1755, Bairro Coroa do Meio, Aracaju/SE</p>
+                    <div class="phones">
+                        <p>(79)3085-3307</p> &nbsp; &nbsp;
+                        <p>(79) 99145-9081</p>
+                    </div>
+                    <p>contato@seeconengenharia.com</p>
+                </div>    
+                <div class="footer-icons">
+                    <a>
+                        <img src="./images/whatsapp.png" alt="logo whatsapp">
+                    </a>
+                    <a>
+                        <img src="./images/Facebook.png" alt="logo facebook">
+                    </a>
+                    <a>
+                        <img src="./images/instagram.png" alt="logo instagram">
+                    </a>
+                    <a>
+                        <img src="./images/linkedin.png" alt="logo linkedin">
+                    </a>
+                    <a>
+                        <img src="./images/youtube.png" alt="logo youtube">
+                    </a>
+                </div> 
+            </div>
+            <div class="created">
+                <a href="https://github.com/Lincoln-Modesto" target="_blank">
+                    <img src="images/github.png" alt="logo github">
+                    <span>&nbsp Lincoln Modesto</span>
                 </a>
-                <a>
-                    <img src="./images/Facebook.png" alt="logo facebook">
-                </a>
-                <a>
-                    <img src="./images/instagram.png" alt="logo instagram">
-                </a>
-                <a>
-                    <img src="./images/linkedin.png" alt="logo linkedin">
-                </a>
-                <a>
-                    <img src="./images/youtube.png" alt="logo youtube">
-                </a>
-            </div> 
-        </div>
-        <div class="created">
-            <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                <img src="images/github.png" alt="logo github">
-                <span>&nbsp Lincoln Modesto</span>
-            </a>
-        </div>
-    </footer>
+            </div>
+        </footer>
+
     </body>
     <script src="js/script.js" type="text/javascript"></script> 
-    <script src="js/buttonMobile.js" type="text/javascript"></script> 
+    <script src="js/buttonMobile.js" type="text/javascript"></script>
+    <script src="js/formValidation.js" type="text/javascript"></script> 
 </html>
